The first 3 files for the website

--- a/index.html
+++ b/index.html
@@ -1,45 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>My Portfolio</title>
-  <link rel="stylesheet" href="styles.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>My Portfolio</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <header>
-    <h1>My Portfolio</h1>
-  </header>
-  <nav>
-    <ul>
-      <li><a href="#about">About Me</a></li>
-      <li><a href="#projects">Projects</a></li>
-    </ul>
-  </nav>
-  <section id="about">
-    <h2>About Me</h2>
-    <p>Hi, my name is [Your Name], and I am a [Your Profession] with a passion for [Your Hobbies].</p>
-  </section>
-  <section id="projects">
-    <h2>Projects</h2>
-    <ul>
-      <!-- Replace the following section with your own projects -->
-      <li><a href="#project-1">Project 1</a></li>
-      <li><a href="#project-2">Project 2</a></li>
-      <li><a href="#project-3">Project 3</a></li>
-    </ul>
-    <section id="project-1">
-      <h3>Project 1</h3>
-      <p>This is a brief description of Project 1.</p>
-    </section>
-    <section id="project-2">
-      <h3>Project 2</h3>
-      <p>This is a brief description of Project 2.</p>
-    </section>
-    <section id="project-3">
-      <h3>Project 3</h3>
-      <p>This is a brief description of Project 3.</p>
-    </section>
-  </section>
+    <header>
+        <h1>My Portfolio</h1>
+    </header>
+    <main>
+        <section id="project-1">
+            <h2>Project 1: My First Project</h2>
+            <p>This is a description of my first project.</p>
+            <a href="#" class="view-more">View More</a>
+        </section>
+        <section id="project-2">
+            <h2>Project 2: My Second Project</h2>
+            <p>This is a description of my second project.</p>
+            <a href="#" class="view-more">View More</a>
+        </section>
+        <section class="project">
+          <h2>My First Project</h2>
+          <p>This is a description of my first project.</p>
+          <a href="#" class="view-more">View More</a>
+        </section>
+    </main>
+    <footer>
+        &copy; 2023 Me
+    </footer>
+    <script src="scripts.js"></script>
 </body>
 </html>
